--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,15 +1,16 @@
-.nav {
+.nav{
+    z-index: 1000;
+    background-color: white;
+    padding: 1vmax;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 1vmax;
     border-bottom: 1px solid rgba(43, 43, 43, 0.137);
-    background-color: white;
-    z-index: 1000;
 }
 
-.logo {
+
+.logo{
     background-color: orangered;
     width: 58px;
     border-radius: 20px;
@@ -17,47 +18,51 @@
     cursor: pointer;
     position: relative;
     right: 2vmax;
-
 }
 
-.navlinks {
+#logoImage{
+    transition:all 0.2s;
+    
+    transform: translateX(-58px);
+}
+
+#logoImage:hover{
+  
+    transform: translateX(0);
+}
+
+.navlinks{
     color: rgb(59, 59, 59);
     text-decoration: none;
     margin: 1vmax 1.2vmax;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
     font-size: 1.1vmax;
+   
 }
 
-.searchbox {
-    position: relative;
-    left: 5vmax;
-}
-
-.searchbox > input {
-    border: none;
-    border-bottom: 1px solid rgba(59, 59, 59, 0.76);
-    width: 15vmax;
-    size: 1.1vmax;
-    outline: none;
-    color: rgb(61, 61, 61);
-    font-weight: 100;
-}
-
-.searchbox > svg {
-    fill: rgb(61, 61, 61);
-}
-
-.navlinks:hover {
+.navlinks:hover{
     color: orangered;
+    text-decoration: none;
 }
 
-#logoImage {
-    transition: all 0.2s;
-    transform: translateX(-54px);
+.searchbox{
+    position: relative;
+   left:5vmax;
 }
 
-#logoImage:hover {
-
-    transform: translateX(1px);
+.searchbox >input{
+    border: none;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.76);
+    width: 15vmax;
+    font-size: 1.1vmax;
+    outline: none;
+    color:rgb(61, 61, 61);
+    font-weight: 100;
+    
+  }
+ 
+  
+  .searchbox > svg{
+    fill: rgb(61, 61, 61);
 }
